The hrms project is commited 07/04/2023 the components

--- a/practice-app/src/scss/themes/_general.scss
+++ b/practice-app/src/scss/themes/_general.scss
@@ -69,7 +69,11 @@ strong {
 .img-radius {
     border-radius: 50%;
 }
-
+.img-radius-profile {
+    border-radius: 50%;
+    height: 100px;
+    width:100px;
+}
 .page-header {
     background: transparent;
     padding: 0;
