--- a/practice-app/src/styles.scss
+++ b/practice-app/src/styles.scss
@@ -2,3 +2,21 @@
 
 /* SCSS */
 @import "scss/style";
+
+.my-submit-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 16px;
+    font-size: 16px;
+  }
+  
+  .my-submit-button:hover {
+    background-color: #0069d9;
+    color: #fff;
+  }
+  .logo_this{
+    height: 100px;
+    width: 130px;
+}
